--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
-    "formik": "^2.4.6",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
